tests/miniJava/neg/005729_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } public class java { }
